Se realizan cambios correspondientes

--- a/src/app/SoftCaribbean/Pacientes/paciente-informe/paciente-informe.component.html
+++ b/src/app/SoftCaribbean/Pacientes/paciente-informe/paciente-informe.component.html
@@ -12,15 +12,57 @@
     </ng-container>
   
     <!-- Weight Column -->
-    <ng-container matColumnDef="nombres">
+    <ng-container matColumnDef="nombreCompleto">
       <th mat-header-cell *matHeaderCellDef> Nombres </th>
-      <td mat-cell *matCellDef="let element"> {{element.nombres}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.nombreCompleto}} </td>
     </ng-container>
   
     <!-- Symbol Column -->
-    <ng-container matColumnDef="apellidos">
+    <ng-container matColumnDef="medico">
       <th mat-header-cell *matHeaderCellDef> Apellidos </th>
-      <td mat-cell *matCellDef="let element"> {{element.apellidos}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.medico}} </td>
+    </ng-container>
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="eps">
+      <th mat-header-cell *matHeaderCellDef> Eps </th>
+      <td mat-cell *matCellDef="let element"> {{element.eps}} </td>
+    </ng-container>
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="arl">
+      <th mat-header-cell *matHeaderCellDef> Arl </th>
+      <td mat-cell *matCellDef="let element"> {{element.arl}} </td>
+    </ng-container>
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="genero">
+      <th mat-header-cell *matHeaderCellDef> Genero </th>
+      <td mat-cell *matCellDef="let element"> {{element.genero}} </td>
+    </ng-container>
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="tipoPersona">
+      <th mat-header-cell *matHeaderCellDef> Tipo Persona </th>
+      <td mat-cell *matCellDef="let element"> {{element.tipoPersona}}</td>
+    </ng-container>
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="direccion">
+      <th mat-header-cell *matHeaderCellDef> Dirección </th>
+      <td mat-cell *matCellDef="let element"> {{element.direccion}} </td>
+    </ng-container>
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="telefono">
+      <th mat-header-cell *matHeaderCellDef> Telefono </th>
+      <td mat-cell *matCellDef="let element"> {{element.telefono}} </td>
+    </ng-container>
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="email">
+      <th mat-header-cell *matHeaderCellDef> Email </th>
+      <td mat-cell *matCellDef="let element"> {{element.email}} </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
